Slim docs to a single README entry and keep UTF-8 run-anywhere.
Authority stays in SPEC plus architecture/testing/codeGraphic; scatter HTML and IDE build artifacts stay out of git.